Change env example

--- a/.env-example
+++ b/.env-example
@@ -1,9 +1,4 @@
-# DJANGO SECRET KEY
-SECRET_KEY = 
-
-
-# PSQL CREDENTIALS
-PSQL_USER = 
-PSQL_PW = 
-PSQL_HOST = 
-PSQL_PORT = 
+DEBUG=
+SECRET_KEY=
+DATABASE_URL=
+SQLITE_URL=
